WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
114296
[BlackBerry] Main page is rendered at wrong large scale after back from any zooming article at read.thestar.com
https://bugs.webkit.org/show_bug.cgi?id=114296
Summary
[BlackBerry] Main page is rendered at wrong large scale after back from any z...
Jacky Jiang
Reported
2013-04-09 11:43:24 PDT
PR: 308655.
Attachments
Patch
(2.09 KB, patch)
2013-04-09 12:28 PDT
,
Jacky Jiang
rwlbuis
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2013-04-09 12:28:42 PDT
Created
attachment 197159
[details]
Patch
Rob Buis
Comment 2
2013-04-09 12:59:05 PDT
Comment on
attachment 197159
[details]
Patch Ok.
Jacky Jiang
Comment 3
2013-04-09 13:06:17 PDT
Committed
r148041
: <
http://trac.webkit.org/changeset/148041
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug