Source/WebKit/blackberry/Api/WebPage.cpp
@@ -3036,6 +3036,8 @@ bool WebPage::canGoBackOrForward(int delta) const
 bool WebPage::goBackOrForward(int delta)
 {
     if (d->m_page->canGoBackOrForward(delta)) {
+        d->m_userPerformedManualZoom = false;
+        d->m_userPerformedManualScroll = false;
         d->m_backingStore->d->suspendScreenUpdates();
         d->m_page->goBackOrForward(delta);
         d->m_backingStore->d->resumeScreenUpdates(BackingStore::None);
